tests/failing/unexpected_token.dodo
// Expected: Expected token Identifier, but got LeftParen

fn () {
}
